[project]
name = "rock-solid-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arthur Brenno", email = "64020210+arthurbrenno@users.noreply.github.com" }
]
requires-python = ">=3.13.1"
dependencies = []

[project.scripts]
rsb = "rsb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
